--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
               <title>my second repo</title>
 </head>
 <body>
-              
+         <h1>I can push to github</h1>    
+         <h1>now i can able to write a code</h1> 
+         <h3>new code change now</h3>
 </body>
 </html>
