--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
               <meta http-equiv="X-UA-Compatible" content="IE=edge">
               <meta name="viewport" content="width=device-width, initial-scale=1.0">
               <title>my second repo</title>
+              <link rel="stylesheet" href="style.css">
 </head>
 <body>
          <h1>I can push to github</h1>    
          <h1>now i can able to write a code</h1> 
          <h3>new code change now</h3>
          <P>more paragraph</P>
+         <p>i am working on coding coding and coding</p>
 </body>
 </html>
