--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
          <h1>I can push to github</h1>    
          <h1>now i can able to write a code</h1> 
-         <h3>new code change now</h3>
+         <h3>new code change now changed orange</h3>
          <P>more paragraph</P>
          <p>i am working on coding coding and coding</p>
 </body>
