--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
               <link rel="stylesheet" href="style.css">
 </head>
 <body>
-         <h1>I can push to github</h1>    
+         <h1>I can push to github.com</h1>    
          <h1>now i can able to write a code</h1> 
          <h3>new code change now changed orange</h3>
          <P>more paragraph</P>
          <p>i am working on coding coding and coding</p>
+         <img src="tiger.jpg" alt="">
 </body>
 </html>
