--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
          <P>more paragraph</P>
          <p>i am working on coding coding and coding</p>
          <img src="tiger.jpg" alt="">
+         <img src="cock.jpg" alt="">
 </body>
 </html>
